CF1-213 Swagger docs Add department-associations documentation
